@@ -25,7 +25,10 @@ config.status: configure
 		--prefix=/usr --mandir=\$${prefix}/share/man --sysconfdir=/etc \
 		CFLAGS="$(CFLAGS)"
 
-build: build-stamp
+build: build-arch build-indep
+
+build-arch: build-stamp
+build-indep: build-stamp
 
 build-stamp: config.status
 	dh_testdir
